--- a/Style.css
+++ b/Style.css
@@ -332,7 +332,7 @@ section h2::after {
     width: 100%;
     padding: 1rem;
     background: #111;
-    border: 1px solid #333;
+    border: 1px solid #077b32;
     border-radius: 8px;
     color: #fff;
 }
@@ -341,11 +341,38 @@ section h2::after {
     min-height: 150px;
     resize: vertical;
 }
-#My-Information{
+.card,
+.My-Information {
+    position: relative;
     background: #111;
-    padding: 3rem 0;
+    padding: 4rem 0;
     text-align: center;
+    border-radius: 30px;
+
+    transition: transform 0.3s ease;
 }
+.card::before,
+.My-Information::before {
+    content: "";
+    position: absolute;
+    inset: 1px; 
+    border-radius: inherit;
+    border: 5px solid #077b32;
+
+    opacity: 0;
+    filter: blur(5px);
+    pointer-events:none;
+     transition: opacity 0.3s ease;
+}
+.card:hover,
+.My-Information:hover {
+    transform: scale(1.05);
+}
+.card:hover::before,
+.My-Information:hover::before {
+    opacity: 1;
+}
+
 #social-links2{
     justify-content: center;
     margin: 1.5rem 0;
