--- a/Style.css
+++ b/Style.css
@@ -53,7 +53,6 @@ header {
 
 .nav-menu {
     padding-right: 0px;
-    padding-left: 500px;
     display: flex;
     justify-content: right;
     gap: 2rem;
@@ -128,6 +127,9 @@ header {
     object-fit: cover;
 }
 
+.hero-image-2 img{
+    border-radius: 500px;
+}
 .hero-content {
     flex: 1;
     max-width: 600px;
@@ -291,6 +293,7 @@ section h2::after {
 
 .card img {
     height: 200px;
+    width:100%;
     object-fit: cover;
 }
 
@@ -306,10 +309,12 @@ section h2::after {
 .card-links {
     margin-top: 1rem;
     display: flex;
+     justify-content: center;
     gap: 1rem;
 }
 
 .card-links a {
+   
     color: #077b32;
     font-weight: 500;
 }
@@ -407,6 +412,7 @@ footer {
 @media (max-width: 768px) {
     .hamburger {
         display: flex;
+        
     }
 
     .nav-menu {
@@ -415,7 +421,7 @@ footer {
         left: -100%;
         width: 100%;
         height: calc(100vh - 80px);
-        background: #000;
+        background:black;
         flex-direction: column;
         align-items: center;
         justify-content: flex-start;
